--- a/atv/templates/atv/cadastrar_fornecedor.html
+++ b/atv/templates/atv/cadastrar_fornecedor.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,18 +6,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastrar Fornecedor</title>
+    <link rel="stylesheet" href="{% static "css/fornecedor.css" %}">
 </head>
 
 <style>
-    .errorlist {
-        display: none;
-    }
-    body{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
+
 </style>
 
 <body>
@@ -28,6 +22,7 @@
             <button type="submit">Cadastrar</button>
         </form>
         <a href="{% url "cadastrar_produto" %}"><button id="produto_button">Novo Produto</button></a>
+        <a href="{% url "lista_produtos" %}"><button id="produto_button">Lista de Produtos</button></a>
         <a href="{% url "cadastrar_categoria" %}"><button id="produto_button">Nova Categoria</button></a>
     </div>
 </body>
